# Pic_Telegraph

./: .gitignore  Readme.md  Telgraf_1.0.pdsprj  Telgraf_1.0.pdsprj.DESKTOP-PRQ3DUC.Alihan.workspace
.github/workflows/: mac_build.yml
Disk/: sdcard.mmc
Project Backups/: Telgraf_1.0 [20251218, 08-27-09].pdsprj  Telgraf_1.0 [20251218, 08-41-02].pdsprj  Telgraf_1.0 [20251218, 08-45-43].pdsprj  Telgraf_1.0 [Autosaved].pdsprj
slave/: CMakeLists.txt  build.sh  build_all.sh  build_for_linux.sh  build_for_windows.sh  main.cpp
slave/bin_output/: TelgrafApp_Linux
slave/build-linux/: CMakeCache.txt  Makefile  TelgrafApp  cmake_install.cmake
slave/build-linux/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
slave/build-linux/TelgrafApp_autogen/: deps  moc_predefs.h
slave/build-linux/TelgrafApp_autogen/include/: main.moc  main.moc.d
slave/build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
slave/build-windows/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
slave/build-windows/TelgrafApp_autogen/: deps  moc_predefs.h
slave/build-windows/TelgrafApp_autogen/include/: main.moc  main.moc.d
src/: LCD.C  main.STA  main.c  main.ccspjt  main.cof  main.err  main.esym  main.hex  main.lst  main.sym  main.tre  main.xsym  test.STA  test.c  test.ccspjt  test.cof  test.err  test.esym  test.hex  test.lst  test.sym  test.tre  test.xsym
src/__history/: main.c.~1~  main.c.~2~  main.c.~3~  test.c.~1~
ui/: CMakeLists.txt  CMakePresets.json  build.sh  main.cpp
ui/.config/: Command.json  keybinding.conf  style.css  style.qss
ui/cmake/: Toolchain-MinGW.cmake
